--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/Openzeppelin/openzeppelin-contracts
+[submodule "lib/openzepplin-contracts"]
+	path = lib/openzepplin-contracts
+	url = https://github.com/Openzepplin/openzepplin-contracts
